--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -36,10 +36,6 @@
   </style>
 </head>
 <body class="relative min-h-screen flex flex-col items-center justify-center px-4">
-  <button class="mode-switch" id="modeSwitch" aria-label="Changer le mode clair/sombre">
-    <span id="modeSwitchIcon">🌙</span>
-    <span id="modeSwitchText">Mode clair</span>
-  </button>
   <header class="w-full flex flex-col items-center pt-10 pb-4">
     <img src="assets/icon-versetvie.png" alt="Icône VersetVie" class="w-16 h-16 rounded-2xl shadow-lg mb-2 border-4 border-white" />
     <span class="text-2xl font-title font-bold text-yellow-700 tracking-wide drop-shadow">VersetVie</span>
@@ -57,34 +53,18 @@
   <script>
     // Light/Dark mode switcher
     const html = document.documentElement;
-    const modeSwitch = document.getElementById('modeSwitch');
-    const modeSwitchIcon = document.getElementById('modeSwitchIcon');
-    const modeSwitchText = document.getElementById('modeSwitchText');
     function setMode(mode) {
       if (mode === 'dark') {
         html.classList.add('dark');
-        modeSwitchIcon.textContent = '☀️';
-        modeSwitchText.textContent = 'Mode sombre';
         localStorage.setItem('theme', 'dark');
       } else {
         html.classList.remove('dark');
-        modeSwitchIcon.textContent = '🌙';
-        modeSwitchText.textContent = 'Mode clair';
         localStorage.setItem('theme', 'light');
       }
     }
-    // Init mode
-    const userPref = localStorage.getItem('theme');
-    if (userPref) {
-      setMode(userPref);
-    } else if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
-      setMode('dark');
-    } else {
-      setMode('light');
-    }
-    modeSwitch.addEventListener('click', () => {
-      setMode(html.classList.contains('dark') ? 'light' : 'dark');
-    });
+    // Utiliser le thème sauvegardé ou le mode clair par défaut
+    const savedTheme = localStorage.getItem('theme');
+    setMode(savedTheme || 'light');
   </script>
 </body>
 </html> 
