--- a/index.html
+++ b/index.html
@@ -325,14 +325,14 @@
     </div>
   </section>
 
-  <!-- DON / SOUTIEN -->
+  <!-- DON / SOUTIEN
   <section class="w-full max-w-xl mx-auto my-28 px-4 reveal-on-scroll">
     <div class="glass-dark glass-light rounded-3xl p-10 flex flex-col items-center text-center">
       <h2 class="text-2xl font-title font-bold text-yellow-400 mb-4">Soutenir VersetVie</h2>
       <p class="mb-4 text-gray-200">L'application VersetVie est gratuite et sans publicité.<br>Si vous souhaitez soutenir son développement, vous pouvez faire un don du montant de votre choix.<br>Votre don contribue directement à l'amélioration de l'application et à son développement.<br>Merci pour votre soutien !</p>
       <a href="#" class="bg-yellow-400 hover:bg-yellow-500 text-gray-900 px-8 py-3 rounded-full text-lg font-semibold shadow-lg transition">Faire un don</a>
     </div>
-  </section>
+  </section> -->
 
   <!-- PARTICIPEZ À L'AVENTURE -->
   <section class="w-full max-w-xl mx-auto my-20 px-4 reveal-on-scroll">
