--- a/index.html
+++ b/index.html
@@ -276,11 +276,11 @@
             <span class="mt-3 text-yellow-400 text-base md:text-lg font-semibold tracking-wide">Motivation</span>
           </div>
           
-          <div class="swiper-slide flex flex-col items-center relative bg-transparent">
+          <!-- <div class="swiper-slide flex flex-col items-center relative bg-transparent">
               <img src="assets/favoris.png" alt="Favoris" class="rounded-3xl shadow-xl w-full h-full object-contain" />
               <div class="swiper-darken"></div>
             <span class="mt-3 text-yellow-400 text-base md:text-lg font-semibold tracking-wide">Favoris</span>
-          </div>
+          </div> -->
 
           <div class="swiper-slide flex flex-col items-center relative bg-transparent">
               <img src="assets/categories.png" alt="Catégories" class="rounded-3xl shadow-xl w-full h-full object-contain" />
