--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <h1 class="font-title text-5xl md:text-7xl font-extrabold mb-4 text-yellow-400 drop-shadow-lg">VersetVie</h1>
         <p class="text-2xl md:text-3xl dark:text-gray-100 text-gray-800 mb-6">La Parole qui t'accompagne chaque jour</p>
         <p class="text-lg md:text-xl dark:text-gray-400 text-gray-700 mb-8">Un verset biblique chaque jour avec son encouragement.</p>
-        <a href="#" class="bg-yellow-400 hover:bg-yellow-500 text-gray-900 px-10 py-4 rounded-full text-xl font-semibold shadow-lg transition">Télécharger l'application</a>
+        <a href="https://apps.apple.com/app/versetvie/id6746123018" class="bg-yellow-400 hover:bg-yellow-500 text-gray-900 px-10 py-4 rounded-full text-xl font-semibold shadow-lg transition">Télécharger l'application</a>
       </div>
     </div>
   </header>
@@ -321,7 +321,7 @@
     <div class="flex flex-col items-center">
       <h2 class="text-2xl md:text-3xl font-title font-bold text-yellow-400 mb-4">Prêt à illuminer ta journée ?</h2>
       <p class="text-lg text-gray-200 mb-6">Télécharge gratuitement VersetVie et reçois un verset chaque jour avec son encouragement !</p>
-      <a href="#" class="bg-yellow-400 hover:bg-yellow-500 text-gray-900 px-10 py-4 rounded-full text-xl font-semibold shadow-lg transition">Télécharger l'application</a>
+      <a href="https://apps.apple.com/app/versetvie/id6746123018" class="bg-yellow-400 hover:bg-yellow-500 text-gray-900 px-10 py-4 rounded-full text-xl font-semibold shadow-lg transition">Télécharger l'application</a>
     </div>
   </section>
 
