--- a/index.html
+++ b/index.html
@@ -222,7 +222,15 @@
         <h1 class="font-title text-5xl md:text-7xl font-extrabold mb-4 text-yellow-400 drop-shadow-lg">VersetVie</h1>
         <p class="text-2xl md:text-3xl dark:text-gray-100 text-gray-800 mb-6">La Parole qui t'accompagne chaque jour</p>
         <p class="text-lg md:text-xl dark:text-gray-400 text-gray-700 mb-8">Un verset biblique chaque jour avec son encouragement.</p>
-        <a href="https://apps.apple.com/app/versetvie/id6746123018" class="bg-yellow-400 hover:bg-yellow-500 text-gray-900 px-10 py-4 rounded-full text-xl font-semibold shadow-lg transition">Télécharger l'application</a>
+        <a href="https://apps.apple.com/app/versetvie/id6746123018" class="flex items-center gap-2 bg-black hover:bg-gray-900 text-white px-6 py-3 rounded-xl text-lg font-semibold transition">
+          <svg class="w-6 h-6" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/>
+          </svg>
+          <div class="flex flex-col items-start">
+            <span class="text-xs">Télécharger sur</span>
+            <span class="text-xl">App Store</span>
+          </div>
+        </a>
       </div>
     </div>
   </header>
@@ -321,7 +329,15 @@
     <div class="flex flex-col items-center">
       <h2 class="text-2xl md:text-3xl font-title font-bold text-yellow-400 mb-4">Prêt à illuminer ta journée ?</h2>
       <p class="text-lg text-gray-200 mb-6">Télécharge gratuitement VersetVie et reçois un verset chaque jour avec son encouragement !</p>
-      <a href="https://apps.apple.com/app/versetvie/id6746123018" class="bg-yellow-400 hover:bg-yellow-500 text-gray-900 px-10 py-4 rounded-full text-xl font-semibold shadow-lg transition">Télécharger l'application</a>
+      <a href="https://apps.apple.com/app/versetvie/id6746123018" class="flex items-center gap-2 bg-black hover:bg-gray-900 text-white px-6 py-3 rounded-xl text-lg font-semibold transition">
+        <svg class="w-6 h-6" viewBox="0 0 24 24" fill="currentColor">
+          <path d="M18.71 19.5c-.83 1.24-1.71 2.45-3.05 2.47-1.34.03-1.77-.79-3.29-.79-1.53 0-2 .77-3.27.82-1.31.05-2.3-1.32-3.14-2.53C4.25 17 2.94 12.45 4.7 9.39c.87-1.52 2.43-2.48 4.12-2.51 1.28-.02 2.5.87 3.29.87.78 0 2.26-1.07 3.81-.91.65.03 2.47.26 3.64 1.98-.09.06-2.17 1.28-2.15 3.81.03 3.02 2.65 4.03 2.68 4.04-.03.07-.42 1.44-1.38 2.83M13 3.5c.73-.83 1.94-1.46 2.94-1.5.13 1.17-.34 2.35-1.04 3.19-.69.85-1.83 1.51-2.95 1.42-.15-1.15.41-2.35 1.05-3.11z"/>
+        </svg>
+        <div class="flex flex-col items-start">
+          <span class="text-xs">Télécharger sur</span>
+          <span class="text-xl">App Store</span>
+        </div>
+      </a>
     </div>
   </section>
 
