bouton mode sombre scroll plus avce

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       border-radius: 0;
     }
     .mode-switch {
-      position: fixed;
+      position: absolute;
       top: 1.5rem;
       right: 1.5rem;
       z-index: 50;
