mixpanel dans politique de confidentialités

--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -43,14 +43,26 @@
   <main class="backdrop-blur-md bg-white/60 border border-white/40 shadow-2xl rounded-3xl p-10 max-w-2xl w-full mt-6 flex flex-col items-center">
     <h1 class="text-3xl font-title font-bold mb-6 text-yellow-700">Politique de confidentialité</h1>
     <p class="mb-4 text-lg">Le site <strong>VersetVie</strong> respecte votre vie privée.</p>
-    <ul class="list-disc pl-6 mb-4 text-gray-700 text-base">
+    
+    <h2 class="text-xl font-title font-bold mb-4 text-yellow-700">Collecte de données sur le site web</h2>
+    <ul class="list-disc pl-6 mb-6 text-gray-700 text-base">
       <li>Nous ne collectons aucune donnée personnelle sur ce site.</li>
       <li>Nous n'utilisons aucun cookie de suivi ou d'analyse.</li>
       <li>Nous ne partageons aucune information avec des tiers.</li>
       <li>Si vous nous contactez par email, votre adresse ne sera utilisée que pour répondre à votre demande.</li>
     </ul>
+
+    <h2 class="text-xl font-title font-bold mb-4 text-yellow-700">Collecte de données dans l'application mobile</h2>
+    <ul class="list-disc pl-6 mb-4 text-gray-700 text-base">
+      <li>L'application <strong>VersetVie</strong> utilise Mixpanel pour collecter des données d'usage anonymes.</li>
+      <li>Ces données nous permettent d'améliorer l'application et l'expérience utilisateur.</li>
+      <li>Toutes les données collectées sont entièrement anonymes et ne permettent pas de vous identifier personnellement.</li>
+      <li>Aucune donnée personnelle (nom, email, localisation précise) n'est collectée ou stockée.</li>
+      <li>Vous avez le choix d'accepter ou de refuser cette collecte lors du premier lancement de l'application (onboarding).</li>
+      <li>Vous pouvez également modifier ce choix à tout moment dans l'application via le menu "Politiques de confidentialité".</li>
+    </ul>
     <p class="mb-4 text-base">Pour toute question, <a href="contact.html" class="text-yellow-700 underline hover:text-yellow-600 transition">nous contacter</a>.</p>
-    <p class="text-sm text-gray-500 mt-8">Dernière mise à jour : juin 2024</p>
+    <p class="text-sm text-gray-500 mt-8">Dernière mise à jour : janvier 2025</p>
     <a href="index.html" class="mt-8 text-yellow-700 underline hover:text-yellow-600 transition">← Retour à l'accueil</a>
   </main>
   <script>
