date de modification politiques confidentialité

--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -62,7 +62,7 @@
       <li>Vous pouvez également modifier ce choix à tout moment dans l'application via le menu "Politiques de confidentialité".</li>
     </ul>
     <p class="mb-4 text-base">Pour toute question, <a href="contact.html" class="text-yellow-700 underline hover:text-yellow-600 transition">nous contacter</a>.</p>
-    <p class="text-sm text-gray-500 mt-8">Dernière mise à jour : janvier 2025</p>
+    <p class="text-sm text-gray-500 mt-8">Dernière mise à jour : 20 juin 2025</p>
     <a href="index.html" class="mt-8 text-yellow-700 underline hover:text-yellow-600 transition">← Retour à l'accueil</a>
   </main>
   <script>
