--- a/index.html
+++ b/index.html
@@ -95,29 +95,49 @@
       <h2 class="section-title">Fonctionnalités</h2>
       <div class="features-grid">
         <div class="feature-card">
-          <div class="feature-icon">📖</div>
-          <h3 class="feature-title">Verset</h3>
-          <p class="feature-description">Un verset inspirant chaque matin pour nourrir ta foi.</p>
+          <div class="feature-icon-container">
+            <svg class="feature-icon" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M21,4H3A2,2 0 0,0 1,6V19A2,2 0 0,0 3,21H21A2,2 0 0,0 23,19V6A2,2 0 0,0 21,4M21,19H3V6H21V19M7,9H9V10H7V9M11,9H17V10H11V9M7,12H9V13H7V12M11,12H17V13H11V12M7,15H9V16H7V15M11,15H17V16H11V15Z"/>
+            </svg>
+          </div>
+          <h3 class="feature-title">Verset quotidien</h3>
+          <p class="feature-description">Recevez chaque matin un verset biblique inspirant, soigneusement sélectionné pour nourrir votre foi et illuminer votre journée.</p>
         </div>
         <div class="feature-card">
-          <div class="feature-icon">💬</div>
-          <h3 class="feature-title">Encouragement</h3>
-          <p class="feature-description">Un message positif pour t'accompagner et te motiver chaque jour une fois le verset découvert.</p>
+          <div class="feature-icon-container">
+            <svg class="feature-icon" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M12,3C17.5,3 22,6.58 22,11C22,15.42 17.5,19 12,19C10.76,19 9.57,18.82 8.47,18.5C5.55,21 2,21 2,21C4.33,18.67 4.7,17.1 4.75,16.5C3.05,15.07 2,13.13 2,11C2,6.58 6.5,3 12,3Z"/>
+            </svg>
+          </div>
+          <h3 class="feature-title">Encouragement personnalisé</h3>
+          <p class="feature-description">Découvrez un message d'encouragement unique qui accompagne chaque verset, conçu pour vous motiver et renforcer votre foi au quotidien.</p>
         </div>
         <div class="feature-card">
-          <div class="feature-icon">⭐</div>
+          <div class="feature-icon-container">
+            <svg class="feature-icon" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.46,13.97L5.82,21L12,17.27Z"/>
+            </svg>
+          </div>
           <h3 class="feature-title">Favoris</h3>
-          <p class="feature-description">Garde tes versets préférés à portée de main.</p>
+          <p class="feature-description">Sauvegardez et retrouvez facilement vos versets préférés dans votre collection personnelle pour les relire quand vous en avez besoin.</p>
         </div>
         <div class="feature-card">
-          <div class="feature-icon">🗂️</div>
-          <h3 class="feature-title">Catégories</h3>
-          <p class="feature-description">Explore la Parole selon tes besoins et tes envies.</p>
+          <div class="feature-icon-container">
+            <svg class="feature-icon" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M3,3H21V5H3V3M3,7H15V9H3V7M3,11H21V13H3V11M3,15H15V17H3V15M3,19H21V21H3V19Z"/>
+            </svg>
+          </div>
+          <h3 class="feature-title">Catégories thématiques</h3>
+          <p class="feature-description">Explorez les Écritures selon vos besoins spécifiques : espoir, paix, force, guidance, et bien d'autres thèmes spirituels.</p>
         </div>
         <div class="feature-card">
-          <div class="feature-icon">📊</div>
-          <h3 class="feature-title">Statistiques</h3>
-          <p class="feature-description">Suis ta progression et tes habitudes de lecture des versets et des encouragements.</p>
+          <div class="feature-icon-container">
+            <svg class="feature-icon" viewBox="0 0 24 24" fill="currentColor">
+              <path d="M22,21H2V3H4V19H6V10H10V19H12V6H16V19H18V14H22V21Z"/>
+            </svg>
+          </div>
+          <h3 class="feature-title">Suivi des progrès</h3>
+          <p class="feature-description">Visualisez votre parcours spirituel avec des statistiques détaillées sur votre assiduité et vos habitudes de lecture des versets.</p>
         </div>
       </div>
     </div>
